<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".LoginActivity"
    tools:deviceIds="wear">


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:hint="Enter Email"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:hint="Enter Password"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:hint="Enter"
        android:layout_height="wrap_content" />



</LinearLayout>